--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
   "private": true,
-  "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "test": "umi test",
-    "lint:es": "eslint --ext .js src mock tests",
-    "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "precommit": "lint-staged"
+  "author": {
+    "name": "chencheng",
+    "email": "sorrycc@gmail.com"
   },
-  "dependencies": {
-    "antd": "^3.12.1",
-    "dva": "^2.5.0-beta.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+  "build": {
+    "productName": "MMG Demo",
+    "files": [
+      "./dist/**/*",
+      "./pages/**/*",
+      "./node_modules/**/*"
+    ],
+    "appId": "com.sorrycc.umi-example-electron",
+    "asar": false
+  },
+  "scripts": {
+    "lint": "tslint \"src/**/*.ts\" \" src/**/*.tsx\"",
+    "start": "electron app/dist/main/main",
+    "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
+    "dev:main": "ESLINT=none BROWSER=none COMPRESS=none roadhog build -w",
+    "dev:renderer": "APP_ROOT=src/renderer BROWSER=none ESLINT=none umi dev",
+    "build": "npm run build:main && npm run build:renderer",
+    "build:main": "ESLINT=none roadhog build",
+    "build:renderer": "APP_ROOT=src/renderer ESLINT=none umi build",
+    "pack": "npm run build && npm run rebuild && build",
+    "pack:dir": "npm run build && npm run rebuild && build --dir",
+    "pack:dirOnly": "build --dir",
+    "rebuild": "electron-rebuild -m ./app"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.12",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-test-renderer": "^16.0.3",
-    "babel-eslint": "^9.0.0",
-    "dva-logger": "^1.0.0",
-    "eslint": "^5.4.0",
-    "eslint-config-umi": "^1.4.0",
-    "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "react-test-renderer": "^16.7.0",
-    "tslint": "^5.12.0",
+    "@babel/runtime": "^7.0.0-beta.49",
+    "concurrently": "^3.5.1",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.15.1",
+    "electron-debug": "^2.0.0",
+    "electron-rebuild": "^1.7.3",
+    "roadhog": "^2.4.2",
+    "slash": "^2.0.0",
+    "tslint": "^5.14.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.4.2",
-    "umi-plugin-react": "^1.4.0"
+    "umi": "^2.6.1",
+    "umi-plugin-dva": "^1.4.0",
+    "umi-plugin-react": "^1.6.0"
   },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "engines": {
-    "node": ">=8.0.0"
+  "dependencies": {
+    "antd": "^3.15.0"
   }
 }
