--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "electron app/dist/main/main",
-    "dev": "concurrently \"npm run dev:renderer\" \"npm run dev:main\"",
+    "dev": "concurrently cross-env APP_TYPE=site \"npm run dev:renderer\" \"npm run dev:main\"",
     "dev:main": "ESLINT=none BROWSER=none COMPRESS=none roadhog build -w",
     "dev:renderer": "APP_ROOT=src/renderer BROWSER=none ESLINT=none umi dev",
     "build": "npm run build:main && npm run build:renderer",
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@babel/runtime": "^7.3.4",
     "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
     "electron": "^4.1.0",
     "electron-builder": "^20.39.0",
     "electron-debug": "^2.1.0",
@@ -46,11 +47,27 @@
     "tslint": "^5.14.0",
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.6.1",
-    "umi-plugin-dva": "^1.4.0",
-    "umi-plugin-react": "^1.6.0"
+    "umi": "1.3.5",
+    "umi-plugin-dva": "0.9.0",
+    "umi-plugin-react": "^1.7.0"
   },
   "dependencies": {
-    "antd": "^3.15.0"
+    "ant-design-pro": "^2.2.1",
+    "antd": "^3.15.1",
+    "braft-editor": "^2.2.9",
+    "classnames": "^2.2.6",
+    "dva": "^2.4.1",
+    "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.1",
+    "memoize-one": "^5.0.0",
+    "moment": "^2.24.0",
+    "path-to-regexp": "^3.0.0",
+    "prop-types": "^15.7.2",
+    "rc-animate": "^2.6.0",
+    "react": "^16.8.4",
+    "react-container-query": "^0.11.0",
+    "react-document-title": "^2.0.3",
+    "react-media": "^1.9.2",
+    "umi-request": "^1.0.4"
   }
 }
